<resources>
    <string name="app_name">AntGallery</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_message">Welcome to Gallery!</string>
    <string name="create_account">Create an account</string>
    <string name="have_an_account">I already have an account</string>
    <string name="webant_logo">Webant logo</string>
    <string name="user_name_req">User Name <font color='#CF497E'>*</font></string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="birthday">Birthday</string>
    <string name="phone_number_req">Phone number <font color='#CF497E'>*</font></string>
    <string name="email_req">Email <font color='#CF497E'>*</font></string>
    <string name="password_req">Password <font color='#CF497E'>*</font></string>
    <string name="confirm_password_req">Confirm password <font color='#CF497E'>*</font></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_header">Sign Up</string>
    <string name="sign_in_header">Sign In</string>
    <string name="cancel">Cancel</string>
    <string name="select_birthday">Select your birthday date</string>
    <string name="error_username">User name contains invalid characters</string>
    <string name="error_birthday">Birth day must be in the past!</string>
    <string name="error_phone">Invalid phone format</string>
    <string name="error_email">Invalid email format</string>
    <string name="error_password">Password must contain at least 6 symbols</string>
    <string name="error_password_confirmation">Passwords do not match</string>
    <string name="warning_input">Make sure your input is valid and all required fields are filled</string>
    <string name="error_user_exists">A user with this email already exists</string>
    <string name="error_user_does_not_exist">A user with this email does not exist</string>
    <string name="error_wrong_password">Wrong password</string>
    <string name="error_unknown">Unknown error. Try again later</string>
    <string name="page_view_desc">View pictures</string>
    <string name="page_add_desc">Add picture</string>
    <string name="page_profile_desc">Profile</string>
    <string name="search">Search</string>
    <string name="tab_new">New</string>
    <string name="tab_popular">Popular</string>
    <string name="label_loading">Loading...</string>
    <string name="label_sorry">Sorry!</string>
    <string name="label_sorry_desc">There are no pictures.\nPlease come back later.</string>
    <string name="desc_grid_item">Grid item</string>
    <string name="settings">Settings</string>
</resources>