<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context=".ui.authorization.AuthorizationFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/btnNavigateUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:src="@drawable/icon_left_arrow"
                app:tint="@color/blue" />

            <com.google.android.material.textview.MaterialTextView
                style="@style/Theme.AntGallery.Text.ToolbarTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel" />
        </LinearLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentGuidelineStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/contentGuidelineEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvHeader"
        style="@style/Theme.AntGallery.Text.Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_header"
        app:layout_constraintBottom_toTopOf="@+id/barrierEditTexts"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:dividerColor="?attr/colorPrimary"
        app:dividerThickness="2dp"
        app:layout_constraintEnd_toEndOf="@+id/tvHeader"
        app:layout_constraintStart_toStartOf="@id/tvHeader"
        app:layout_constraintTop_toBottomOf="@id/tvHeader" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUsername"
        style="@style/Theme.AntGallery.Text.Editable.Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/user_name_req"
        app:endIconDrawable="@drawable/icon_person"
        app:layout_constraintBottom_toTopOf="@id/tilBirthday"
        app:layout_constraintEnd_toStartOf="@id/contentGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/contentGuidelineStart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUsername"
            style="@style/Theme.AntGallery.Text.Editable.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilBirthday"
        style="@style/Theme.AntGallery.Text.Editable.Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/birthday"
        app:endIconDrawable="@drawable/icon_date"
        app:layout_constraintBottom_toTopOf="@id/tilPhone"
        app:layout_constraintEnd_toStartOf="@id/contentGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/contentGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tilUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etBirthday"
            style="@style/Theme.AntGallery.Text.Editable.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPhone"
        style="@style/Theme.AntGallery.Text.Editable.Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number_req"
        app:endIconDrawable="@drawable/icon_phone"
        app:layout_constraintBottom_toTopOf="@id/tilEmail"
        app:layout_constraintEnd_toStartOf="@id/contentGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/contentGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tilBirthday">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPhone"
            style="@style/Theme.AntGallery.Text.Editable.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Theme.AntGallery.Text.Editable.Layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_req"
        app:endIconDrawable="@drawable/icon_mail"
        app:layout_constraintBottom_toTopOf="@id/tilPassword"
        app:layout_constraintEnd_toStartOf="@id/contentGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/contentGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tilPhone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            style="@style/Theme.AntGallery.Text.Editable.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Theme.AntGallery.Text.Editable.Layout.Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_req"
        app:endIconDrawable="@drawable/selector_show_password"
        app:layout_constraintBottom_toTopOf="@id/tilConfirmPassword"
        app:layout_constraintEnd_toStartOf="@id/contentGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/contentGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            style="@style/Theme.AntGallery.Text.Editable.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        style="@style/Theme.AntGallery.Text.Editable.Layout.Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_req"
        app:endIconDrawable="@drawable/selector_show_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/contentGuidelineEnd"
        app:layout_constraintStart_toEndOf="@id/contentGuidelineStart"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            style="@style/Theme.AntGallery.Text.Editable.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAct"
        style="@style/Theme.AntGallery.Button.Primary"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toTopOf="@id/btnChangeMode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword"
        app:layout_constraintVertical_bias="0.3"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangeMode"
        style="@style/Theme.AntGallery.Button.Tertiary"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAct" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierEditTexts"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:barrierDirection="top"
        app:constraint_referenced_ids="tilUsername, tilBirthday, tilPhone, tilEmail, tilPassword, tilConfirmPassword" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupRegistrationFields"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="tilUsername, tilBirthday, tilPhone, tilConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>